--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
         <section class="description">
           <p><b>Project:</b> Brainly Health Website and Mobile Design.</p>
           <p><b>Role:</b> Brainly Health Website and Mobile Design</p>
-          <p><b>Responsibilities:</b>Interview organizer, Schematic design, low and high-fidelity prototyping, conducting usability studies, accessibility studies, design iteration and responsive design. </p>
+          
           <p><b>Duration: </b> Spring 2023 (March)</p>
+        </section>
+        <section class="description">
+          <h3>Responsibilities</h3>
+          <p class="des"> Interview organizer, Schematic design, low and high-fidelity prototyping, conducting usability studies, accessibility studies, design iteration and responsive design. </p>
         </section>
       </section>
 
@@ -87,7 +91,7 @@
         </section>
         <section class="description">
           <p class="des">Brainy Health is a responsive mental health services website. The typical user is between the ages of 20 and 35, and most users are college students or adult parents with a professional job. Brainy Health's objective is to provide a generalized therapy service for people who do not have clinics near where they live, in addition to identifying mental illnesses through tests.</p>
-          </section>
+        </section>
         <section class="img-section">
         <img class="img" src="img/3.svg" loading="lazy">
         </section>
@@ -241,8 +245,8 @@
         <header>
           <h2>Takeaways</h2>
           <section class="description">
-            <p class="des"><b>Impact:</b>Our users mention that the minimalist design makes navigation easier, the images are attractive, and the structure of the page is clear and concise.</p>
-            <p class="des"><b>What I learned:</b>I learned that design will always have a long but safe process, it is necessary to maintain iterative processes accompanied by feedback to improve the product and create things that users use.</p>
+            <p class="des"><b>Impact:</b> Our users mention that the minimalist design makes navigation easier, the images are attractive, and the structure of the page is clear and concise.</p>
+            <p class="des"><b>What I learned:</b> I learned that design will always have a long but safe process, it is necessary to maintain iterative processes accompanied by feedback to improve the product and create things that users use.</p>
           </section>
         </header>
       </section>
